--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@
                             </div>
                         </div>
                         <div class="p-8">
-                            <h5 class="mb-1 text-xl font-bold text-gray-900">Jorje Blasco</h5>
+                            <h5 class="mb-1 text-xl font-bold text-gray-900">Jorge Blasco</h5>
                             <!--<p>Sr. Software Engineer</p>-->
                         </div>
                     </div>
