--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
                         <div class="m-auto line"></div>
                         <h3 class="title">Sobre nosotros</h3>
                         <p class="mt-10">
-                            La familia Active Academy está compuesta por Sergio y Jorje, apasionados por la enseñanza,
+                            La familia Active Academy está compuesta por Sergio y Jorge, apasionados por la enseñanza,
                             de
                             vocación profesores y actualmente estando en activo, son los que se encargan de la
                             Planificación y desarrollo de las actividades que promueve Active Academy. Además siendo
