--- a/index.html
+++ b/index.html
@@ -68,9 +68,6 @@
                                     <li class="nav-item active">
                                         <a class="page-scroll" href="#quienessomos">¿quienes somos?</a>
                                     </li>
-                                    <li class="nav-item active">
-                                        <a class="page-scroll" href="#valores">valores</a>
-                                    </li>
                                     <li class="nav-item">
                                         <a class="page-scroll" href="#actividades">Actividades</a>
                                     </li>
@@ -92,7 +89,7 @@
                             <div
                                 class="absolute right-0 hidden mt-2 mr-24 navbar-btn sm:inline-block lg:mt-0 lg:static lg:mr-0">
                                 <a class="main-btn gradient-btn page-scroll" data-scroll-nav="0" href="#footer"
-                                    rel="nofollow">Contacta</a>
+                                    rel="nofollow">Contacto</a>
                             </div>
                         </nav>
                     </div>
@@ -177,7 +174,7 @@
                         <p>Cultura del esfuerzo, perseverancia y trabajo en equipo a
                             través de situaciones de juego tanto individuales como
                             colectivas, serán nuestros pilares básicos para el
-                            desarrollo personal íntegro, el autoconocimiento y el
+                            desarrollo personal íntegro, el autoconocimiento y el respeto por los que nos rodean.
                         </p>
                     </div>
                 </div>
@@ -207,11 +204,13 @@
                 <div class="col-lg-4">
                     <div class="single-testimonial">
                         <div class="pb-10 text-center card-title">
-                            <h5 class="title" style="font-size: 30px;">Voley</h5>
+                            <h5 class="title" style="font-size: 30px;">CATÁLOGO</h5>
                         </div>
+                        <a href="assets/images/TRIPTICO ACTIVIDADES 2021-2022 .pdf">
+                            <img class="w-full" style="height: 200px;" src="assets/images/catalogo.jpg"
+                                alt="Sunset in the mountains">
+                        </a>
 
-                        <img class="w-full" style="height: 200px;" src="assets/images/voley.jpg"
-                            alt="Sunset in the mountains">
                     </div>
                 </div>
                 <div class="col-lg-4">
@@ -367,15 +366,14 @@
                 <div class="col-lg-4">
                     <div class="single-testimonial">
                         <div class="pb-10 text-center card-title">
-                            <h5 class="title" style="font-size: 30px;">CATÁLOGO</h5>
+                            <h5 class="title" style="font-size: 30px;">Voley</h5>
                         </div>
-                        <a href="assets/images/TRIPTICO ACTIVIDADES 2021-2022 .pdf">
-                            <img class="w-full" style="height: 200px;" src="assets/images/catalogo.jpg"
-                                alt="Sunset in the mountains">
-                        </a>
 
+                        <img class="w-full" style="height: 200px;" src="assets/images/voley.jpg"
+                            alt="Sunset in the mountains">
                     </div>
                 </div>
+
             </div>
         </div>
     </section>
@@ -610,40 +608,28 @@
                         <p class="mt-10">
                             La familia Active Academy está compuesta por Sergio y Jorge, apasionados por la enseñanza,
                             de
-                            vocación profesores y actualmente en activo, encargándose de la planificación y gestión,
+                            vocación profesores y actualmente en activo,
                             encargándose de la planificación y gestión
                             de las actividades que promueve Active Academy.
-                            Además siendo igual de importante, Active Academy está compuesta por un equipo de monitores
+                            El resto del equipo está compuesto por monitores
                             y entrenadores titulados y con gran experiencia en cada uno de sus ámbitos, siendo uno de
                             los pilares fundamentales el trato excelente y la cercanía con las personas.
                         </p>
                     </div>
                 </div>
             </div>
-            <div class="justify-center row">
+            <!--<div class="justify-center row">
                 <div class="w-full sm:w-2/3 lg:w-1/3">
                     <div class="mt-8 text-center single-team wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">
                         <div class="relative team-image">
                             <img class="w-full" src="assets/images/Usuario-Vacio.png" alt="Team">
                         </div>
                         <div class="p-8">
-                            <h5 class="mb-1 text-xl font-bold text-gray-900">Sergio Martinez</h5>
-                            <!--<p>Founder and CEO</p>-->
+                            <h5 class="mb-1 text-xl font-bold text-gray-900">Sergio Martínez & Jorge Blasco</h5>
                         </div>
                     </div>
                 </div>
-                <div class="w-full sm:w-2/3 lg:w-1/3">
-                    <div class="mt-8 text-center single-team wow fadeIn" data-wow-duration="1s" data-wow-delay="0.5s">
-                        <div class="relative team-image">
-                            <img class="w-full" src="assets/images/Usuario-Vacio.png" alt="Team">
-                        </div>
-                        <div class="p-8">
-                            <h5 class="mb-1 text-xl font-bold text-gray-900">Jorge Blasco</h5>
-                            <!--<p>Sr. Software Engineer</p>-->
-                        </div>
-                    </div>
-                </div>
-            </div>
+            </div>-->
         </div>
     </section>
 
@@ -673,6 +659,8 @@
                                         <li><a href="assets/images/infografia.png">INFOGRAFÍA</a></li>
                                         <li><a href="assets/images/TRIPTICO ACTIVIDADES 2021-2022 .pdf">OFERTA
                                                 ACTIVIDADES</a></li>
+                                        <li><a href="https://instagram.com/activeacademy_zgz">INSTAGRAM</a></li>
+
                                     </ul>
                                 </div>
                             </div>
@@ -681,7 +669,7 @@
                     <div class="w-4/5 sm:w-1/3 md:w-2/5 lg:w-2/6">
                         <div class="mt-12 footer-contact wow fadeIn" data-wow-duration="1s" data-wow-delay="0.8s">
                             <div class="footer-title">
-                                <h4 class="mb-8 text-2xl font-bold text-white">Contact Us</h4>
+                                <h4 class="mb-8 text-2xl font-bold text-white">Contacto</h4>
                             </div>
                             <ul class="contact">
                                 <li>678998270</li>
